deployment-yaml-files/05-ALB-Ingress-Group/03-App3-Deployment-and-Service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3-container
          image: mirana/app3
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-clusterip-service
  labels:
    app: app3
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    # alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
